--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  margin-top: 100px;
+  margin-top: 80px;
 }
 
 h1,
@@ -28,8 +28,8 @@ h3 {
 }
 
 p {
-  //background: var(--secondary-color);
-  //padding: 20px;
+  /*background: var(--secondary-color);
+  padding: 20px;*/
   border-radius: 4px;
   font-size: 18px;
   line-height: 1.5;
@@ -73,6 +73,7 @@ p {
 .about-paragraphs {
   display: flex;
   margin: 30px 0;
+  padding: 30px;
 }
 
 .about-paragraphs p {
@@ -90,4 +91,8 @@ p {
 
 .email-link:hover {
   text-decoration: underline;
+}
+
+.content-space {
+  padding: 30px;
 }
